--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
 	],
 	"scripts": {},
 	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "6.14.0",
 		"eslint": "8.55.0",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
