--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@typescript-eslint/eslint-plugin": "6.14.0",
 		"@typescript-eslint/parser": "6.14.0",
 		"eslint": "8.55.0",
+		"eslint-config-prettier": "9.1.0",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
 	}
