--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
 		"eslint-plugin",
 		"assert"
 	],
-	"scripts": {},
+	"scripts": {
+		"compile": "tsc --build"
+	},
 	"devDependencies": {
 		"@typescript-eslint/eslint-plugin": "6.14.0",
 		"@typescript-eslint/parser": "6.14.0",
