--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"lint": "eslint --max-warnings 0 ."
 	},
 	"devDependencies": {
+		"@enormora/eslint-config-typescript": "0.0.7",
 		"@typescript-eslint/eslint-plugin": "6.14.0",
 		"@typescript-eslint/parser": "6.14.0",
 		"eslint": "8.55.0",
