--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@enormora/eslint-config-base": "0.0.7",
 		"@enormora/eslint-config-node": "0.0.7",
 		"@enormora/eslint-config-typescript": "0.0.7",
+		"ava": "6.0.1",
 		"eslint": "8.55.0",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
