Add @ava/typescript development dependency

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"lint": "eslint --max-warnings 0 ."
 	},
 	"devDependencies": {
+		"@ava/typescript": "4.1.0",
 		"@enormora/eslint-config-base": "0.0.7",
 		"@enormora/eslint-config-node": "0.0.7",
 		"@enormora/eslint-config-typescript": "0.0.7",
