--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 	},
 	"devDependencies": {
 		"@ava/typescript": "4.1.0",
+		"@enormora/eslint-config-ava": "0.0.7",
 		"@enormora/eslint-config-base": "0.0.7",
 		"@enormora/eslint-config-node": "0.0.7",
 		"@enormora/eslint-config-typescript": "0.0.7",
