Set package type to "module"

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 	"files": [],
 	"author": "Christian Rackerseder <github@echooff.de>",
 	"license": "ISC",
+	"type": "module",
 	"keywords": [
 		"eslint",
 		"eslintplugin",
