--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"target": "ES2022",
-		"module": "CommonJS",
-		"moduleResolution": "Node10",
+		"module": "Node16",
+		"moduleResolution": "Node16",
 		"outDir": "./target",
 		"sourceMap": true,
 		"declaration": true,
