--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
 	],
 	"scripts": {
 		"compile": "tsc --build",
-		"lint": "eslint --max-warnings 0 ."
+		"lint": "eslint --max-warnings 0 .",
+		"pretest:unit": "npm run compile",
+		"test:unit": "ava"
 	},
 	"devDependencies": {
 		"@ava/typescript": "4.1.0",
