--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
 		"eslint": "8.55.0",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
+	},
+	"dependencies": {
+		"@typescript-eslint/utils": "6.14.0"
 	}
 }
