--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@enormora/eslint-config-base": "0.0.9",
 		"@enormora/eslint-config-node": "0.0.9",
 		"@enormora/eslint-config-typescript": "0.0.9",
+		"@typescript-eslint/rule-tester": "6.14.0",
 		"ava": "6.0.1",
 		"eslint": "8.55.0",
 		"prettier": "3.1.1",
