--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 		"@typescript-eslint/rule-tester": "6.14.0",
 		"ava": "6.0.1",
 		"eslint": "8.55.0",
+		"eslint-doc-generator": "1.6.1",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
 	},
