Add mocha development dependency

--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
 		"@enormora/eslint-config-base": "0.0.9",
 		"@enormora/eslint-config-node": "0.0.9",
 		"@enormora/eslint-config-typescript": "0.0.9",
+		"@types/mocha": "10.0.6",
 		"@typescript-eslint/rule-tester": "6.14.0",
 		"eslint": "8.55.0",
 		"eslint-doc-generator": "1.6.1",
+		"mocha": "10.2.0",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
 	},
