--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"@enormora/eslint-config-node": "0.0.9",
 		"@enormora/eslint-config-typescript": "0.0.9",
 		"@types/mocha": "10.0.6",
+		"@types/node": "20.10.4",
 		"@typescript-eslint/rule-tester": "6.14.0",
 		"eslint": "8.55.0",
 		"eslint-doc-generator": "1.6.1",
