Skip library check from compilation

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -17,6 +17,7 @@
 		"exactOptionalPropertyTypes": true,
 		"allowSyntheticDefaultImports": true,
 		"esModuleInterop": true,
-		"verbatimModuleSyntax": true
+		"verbatimModuleSyntax": true,
+		"skipLibCheck": true
 	}
 }
