--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"mocha": "10.2.0",
 		"pr-log": "6.0.0",
 		"prettier": "3.2.1",
+		"release-it": "17.0.1",
 		"typescript": "5.3.3"
 	},
 	"peerDependencies": {
