Change automerge type to "pull request" for Renovate updates

--- a/renovate.json
+++ b/renovate.json
@@ -13,7 +13,7 @@
 			"depTypeList": ["dependencies", "devDependencies"],
 			"updateTypes": ["minor", "patch"],
 			"automerge": true,
-			"automergeType": "branch"
+			"automergeType": "pr"
 		}
 	]
 }
