Add repository information to package

--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
 	"type": "module",
 	"description": "ESLint rules for the Node.js 'node:assert' module",
 	"author": "Christian Rackerseder <github@echooff.de>",
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/screendriver/eslint-plugin-node-assert.git"
+	},
 	"license": "MIT",
 	"exports": "./target/build/source/all-rules.js",
 	"files": [
