--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
 		"eslint": "8.55.0",
 		"eslint-doc-generator": "1.6.1",
 		"mocha": "10.2.0",
+		"pr-log": "6.0.0",
 		"prettier": "3.1.1",
 		"typescript": "5.3.3"
 	},
