--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,7 @@
 {
-	"extends": ["config:base", ":disableDependencyDashboard"],
+	"extends": ["config:base"],
 	"labels": ["renovate", "upgrade"],
+	"dependencyDashboard": false,
 	"lockFileMaintenance": {
 		"enabled": true,
 		"automerge": true
