--- a/.release-it.json
+++ b/.release-it.json
@@ -1,11 +1,16 @@
 {
+	"git": {
+		"changelog": "npx pr-log --stdout --unreleased"
+	},
 	"npm": {
 		"publish": true
 	},
 	"github": {
-		"release": false
+		"release": true,
+		"releaseName": "${version}"
 	},
 	"hooks": {
-		"before:init": ["npm run compile", "npm run lint", "npm run test:unit"]
+		"before:init": ["npm run compile", "npm run lint", "npm run test:unit"],
+		"after:bump": ["npx pr-log ${version} --sloppy"]
 	}
 }
