--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"eslint": "8.56.0",
 		"eslint-doc-generator": "1.6.2",
 		"mocha": "10.2.0",
+		"npm-run-all": "4.1.5",
 		"pr-log": "6.0.0",
 		"prettier": "3.2.4",
 		"release-it": "17.0.1",
