Group @enormora/eslint-config-* dependencies

--- a/renovate.json
+++ b/renovate.json
@@ -11,6 +11,10 @@
 	},
 	"packageRules": [
 		{
+			"matchPackagePatterns": ["^@enormora/eslint-config"],
+			"groupName": "@enormora/eslint-config"
+		},
+		{
 			"depTypeList": ["dependencies", "devDependencies"],
 			"updateTypes": ["minor", "patch"],
 			"automerge": true,
