--- a/renovate.json
+++ b/renovate.json
@@ -15,8 +15,8 @@
 			"groupName": "@enormora/eslint-config"
 		},
 		{
-			"depTypeList": ["dependencies", "devDependencies"],
-			"updateTypes": ["minor", "patch"],
+			"matchDepTypes": ["dependencies", "devDependencies"],
+			"matchUpdateTypes": ["minor", "patch"],
 			"automerge": true,
 			"automergeType": "pr"
 		}
