Change group name

--- a/renovate.json
+++ b/renovate.json
@@ -12,7 +12,7 @@
 	"packageRules": [
 		{
 			"matchPackagePatterns": ["^@enormora/eslint-config"],
-			"groupName": "@enormora/eslint-config"
+			"groupName": "enormora-eslint-config"
 		},
 		{
 			"matchDepTypes": ["dependencies", "devDependencies"],
