--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,4 @@
+---
 name: CI
 
 on: [push, pull_request]
@@ -5,12 +6,15 @@ on: [push, pull_request]
 jobs:
     test:
         runs-on: ubuntu-latest
+        strategy:
+            matrix:
+                node-version: ["20.x", "22.x", "24.x"]
         steps:
             - uses: actions/checkout@v5
-            - name: Use Node.js v20
+            - name: Use Node.js v${{ matrix.node-version }}
               uses: actions/setup-node@v6
               with:
-                  node-version: "24.x"
+                  node-version: ${{ matrix.node-version }}
             - name: Install dependencies
               run: npm clean-install
             - name: Run unit tests
